<resources>
    <string name="app_name">Taskie</string>
    <string name="newTaskHeadingText">New task:</string>
    <string name="newTaskTitleInputHint">Enter task title</string>
    <string name="newTaskDescriptionInputHint">Enter task description</string>
    <string name="lowPriority">Low</string>
    <string name="mediumPriority">Medium</string>
    <string name="highPriority">High</string>
    <string name="saveTaskActionText">Save</string>
    <string name="emptyFields">Check your inputs</string>
    <string name="noTaskFound">No such task found</string>
    <string name="no_data">No data! :(</string>

    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="logout">LOGOUT</string>
    <string name="signOut">SIGN OUT</string>
    <string name="goToRegister">Not a member? Sign up now.</string>
    <string name="goTologin">Already registred! Login Me.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>

    <string name="refreshTasks">Refresh tasks</string>
    <string name="taskHeadingUpdate">Update task</string>
    <string name="editTaskNameUpdate">New task title:</string>
    <string name="editTaskDescUpdate">New task description:</string>
    <string name="editTaskPrioUpdate">New task priority:</string>
    <string name="deleteAllTasks">Delete all tasks</string>
</resources>
