<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:id="@+id/newTaskHeading"
            style="@style/HeadingTextView"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/marginMiddle"
            android:layout_marginTop="@dimen/marginMiddle"
            android:layout_gravity="center"
            android:text="@string/taskHeadingUpdate"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editTaskNameUpdate"
            android:layout_gravity="center"/>
    <EditText
            android:id="@+id/tasktTitleUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginMiddle"
            android:layout_marginTop="@dimen/marginMiddle"
            android:layout_gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editTaskDescUpdate"
            android:layout_gravity="center"/>
    <EditText
            android:id="@+id/taskDescUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginMiddle"
            android:layout_marginTop="@dimen/marginMiddle"
            android:layout_gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editTaskPrioUpdate"
            android:layout_gravity="center"/>
    <Spinner
            android:id="@+id/taskPriorityUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginMiddle"
            android:layout_marginTop="@dimen/marginMiddle"
            android:layout_gravity="center"
            android:entries="@array/priorities"/>
    <Button
            android:id="@+id/saveTaskUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginMiddle"
            android:layout_marginTop="@dimen/marginMiddle"
            android:layout_gravity="center"
            android:text="@string/saveTaskActionText"/>
</LinearLayout>